fix(front): do not make job line commands sticky if they are too big

--- a/front/assets/css/app-semaphore.css
+++ b/front/assets/css/app-semaphore.css
@@ -1375,7 +1375,7 @@ li.projects-menu-item-special:hover {
     padding-right: 135px;
 }
 /* Toggle .sticky-commands on container to apply */
-.sticky-commands .job-log-line.command {
+.sticky-commands .job-log-line.command.sticky {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
